# zensical-dyalog

./: .gitignore  .gitmodules  README.md  known-issues.txt  versions.json
.github/workflows/: publish.yml
20.0/: 404.html  index.html  sitemap.xml
20.0/compiler-user-guide/: index.html
20.0/conventions/: index.html
20.0/documentation-assets/: index.html
20.0/dotnet-framework-interface-guide/: index.html
20.0/dotnet-interface-guide/: index.html
20.0/interface-guide/: index.html
20.0/language-reference-guide/: index.html
20.0/licences-overview/: index.html
20.0/object-reference/: index.html
20.0/programming-reference-guide/: index.html
20.0/release-notes/: index.html
20.0/shared-code-files-user-guide/: index.html
20.0/trademarks/: index.html
20.0/unix-installation-and-configuration-guide/: index.html
20.0/unix-user-guide/: index.html
20.0/windows-installation-and-configuration-guide/: index.html
20.0/windows-ui-guide/: index.html
21.0/: 404.html  index.html  sitemap.xml
21.0/compiler-user-guide/: index.html
21.0/conventions/: index.html
21.0/documentation-assets/: index.html
21.0/dotnet-framework-interface-guide/: index.html
21.0/dotnet-interface-guide/: index.html
21.0/interface-guide/: index.html
docs/: deploy.md
docs/prs/: 20.md  21.md  (+6 more)
tools/: check_flatten.py  conftest.py  convert.py  dyalog_caption.py  fixture_tree.py  pyproject.toml  requirements-build.txt  requirements-deploy.txt  requirements-dev.txt  test_check_flatten.py  test_convert.py  test_dyalog_caption.py  test_rewrite_h1.py
zensical/: zensical.toml
(+9082 files in other folders)
