# Packages the caption extension so `import dyalog_caption` resolves wherever
# the site is built: Python-Markdown imports the extension by module name when
# Zensical builds, so it must be installed, not merely on a test path.
# Install with: pip install -e tools/
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dyalog-caption"
version = "0.1.0"
description = "Python-Markdown extension restoring Dyalog documentation table numbering under Zensical."
requires-python = ">=3.11"
dependencies = ["markdown"]

[tool.setuptools]
py-modules = ["dyalog_caption"]
